valides/gateway_demos_green_blue/files/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: testistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b 
        image: gcr.io/dev-karisimbi-c302/github.com/wefactorit/service-b:0.4
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: testistio
spec:
  selector:
    app: service-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
